# MA_Sentry

./: CONTRIBUTING_ZH.md  README.md
navigation/: .gitignore  Cargo.toml  README.md  build.sh  code.sh  debug_bt.sh  debug_cmd.sh  echo_cmd_speed.sh  prebuild.sh  run_bt.sh  run_real.sh  run_simu.sh  save_grid_map.sh  stop_vel.sh
navigation/.cargo/: config.toml
navigation/src/ma-dds/: Cargo.toml
navigation/src/ma-dds/src/: builder.rs  error.rs  extension.rs  lib.rs
navigation/src/ma_decision/ma_behavior_tree/: Cargo.toml
navigation/src/ma_decision/ma_behavior_tree/.cargo/: config.toml
navigation/src/ma_decision/ma_behavior_tree/src/: dedup.rs  fake_serial.rs  main.rs  nav2_action.rs
navigation/src/ma_decision/ma_behavior_tree/src/behavior/: alert.rs  attack.rs  mod.rs  nav.rs  retreat.rs
navigation/src/ma_decision/ma_behavior_tree/src/behavior/sentry_state/: game_status.rs  hp.rs  mod.rs  outpost_hp.rs  spin.rs
navigation/src/ma_decision/ma_behavior_tree/src/sentry_action/: mod.rs  move_to.rs
navigation/src/ma_decision/ma_behavior_tree/src/sentry_action/nav_to_pose/: error.rs  mod.rs
navigation/src/ma_decision/ma_behavior_tree/src/tests/: mod.rs
navigation/src/ma_decision/ma_bringup/: Cargo.toml
navigation/src/ma_decision/ma_bringup/src/: main.rs
navigation/src/ma_decision/my_nav_goal_publisher/: CMakeLists.txt
navigation/src/ma_decision/my_nav_goal_publisher/config/: test_tree.xml
navigation/src/ma_decision/my_nav_goal_publisher/include/: check_ammunition_count.hpp  check_ammunition_count_2.hpp
navigation/src/ma_decision/my_nav_goal_publisher/src/: my_nav_goal_publisher.cpp  test_tree.cpp  visual_tool.cpp
navigation/src/ma_desion/my_nav_goal_publisher/: package.xml
navigation/src/ma_desion/my_nav_goal_publisher/config/: test_tree.xml
navigation/src/ma_desion/my_nav_goal_publisher/include/: check_ammunition_count.hpp  my_nav_goal_publisher.hpp  repeat_until_fail.hpp
navigation/src/ma_desion/my_nav_goal_publisher/src/: test_tree.cpp
navigation/src/rm_driver/livox_ros_driver2/src/config/: MID360_config.json  mixed_HAP_MID360_config.json
navigation/src/rm_driver/livox_ros_driver2/src/launch/: msg_HAP_launch.py  msg_MID360_launch.py  rviz_HAP_launch.py  rviz_MID360_launch.py  rviz_mixed.py
navigation/src/rm_driver/livox_ros_driver2/src/src/: lddc.cpp  livox_ros_driver2.cpp
navigation/src/rm_driver/ma_serial_driver/: Cargo.toml
navigation/src/rm_driver/ma_serial_driver/src/: decoder.rs  encoder.rs  frames.rs  main.rs  serial_io.rs  ttyio.rs  util.rs
navigation/src/rm_driver/rmoss_/rmoss_base/: CMakeLists.txt  package.xml
navigation/src/rm_driver/rmoss_/rmoss_base/include/rmoss_base/: simple_robot_base_node.hpp  uart_transporter.hpp
navigation/src/rm_driver/rmoss_/rmoss_base/src/: simple_robot_base_node.cpp
navigation/src/rm_interfaces/: Cargo.toml
navigation/src/rm_interfaces/msg/: BTState.msg  JudgeSystemData.msg
navigation/src/rm_interfaces/src/: lib.rs
navigation/src/rm_interfaces/src/geometry_msgs/: msg.rs
navigation/src/rm_interfaces/src/msg/: mod.rs
navigation/src/rm_interfaces/src/nav2_msgs/: action.rs
navigation/src/rm_interfaces/src/std_msgs/: msg.rs
navigation/src/rm_localization/FAST_LIO/src/: laserMapping.cpp
navigation/src/rm_localization/point_lio/: CMakeLists.txt
navigation/src/rm_localization/point_lio/src/: laserMapping.cpp
navigation/src/rm_localization/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
navigation/src/rm_nav_bringup/config/reality/: icp_registration_real.yaml  measurement_params_real.yaml  nav2_params_real.yaml  pointlio_mid360_real.yaml  segmentation_real.yaml  small_gicp_localization_real.yaml
navigation/src/rm_nav_bringup/config/simulation/: icp_registration_sim.yaml  mapper_params_localization_sim.yaml
navigation/src/rm_nav_bringup/launch/: bringup_real.launch.py
navigation/src/rm_nav_bringup/map/: .gitignore  RMUL.yaml  ma_room.pgm  ma_room.yaml
navigation/src/rm_nav_bringup/urdf/: sentry_robot_real.xacro
navigation/src/rm_navigation/fake_vel_transform/src/: fake_vel_transform.cpp
navigation/src/rm_navigation/rm_navigation/params/: nav2_params.yaml
vision/src/rm_auto_aim/armor_solver/src/: armor_solver.cpp
vision/src/rm_bringup/config/: camera_info.yaml  launch_params.yaml
vision/src/rm_bringup/config/node_params/: armor_solver_params.yaml
vision/src/rm_hardware_driver/rm_serial_driver/include/rm_serial_driver/: fixed_packet_tool.hpp
vision/src/rm_hardware_driver/rm_serial_driver/include/rm_serial_driver/protocol/: sentry_protocol.hpp
vision/src/rm_hardware_driver/rm_serial_driver/src/protocol/: infantry_protocol.cpp  sentry_protocol.cpp
vision/src/rm_interfaces/msg/: JudgeSystemData.msg
