[package]
name = "ma_behavior_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bonsai-bt = { version = "0.10.0", features = ["visualize"] }
r2r.workspace = true
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread"] }
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
rand = "0.9.0"

[[bin]]
name = "ma_bt"
path = "src/main.rs"
