[package]
name = "ma_behavior_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
ros2-client.workspace = true
ma-dds.workspace = true
serde = { workspace = true, features = ["derive"] }
smol.workspace = true
async-broadcast.workspace = true
futures-util.workspace = true
rand = "0.9"
ma_interfaces.workspace = true
env_logger.workspace = true
log.workspace = true
pin-project.workspace = true

[[bin]]
name = "ma_bt"
path = "src/main.rs"

[features]
fake_serial = []
default = ["fake_serial"]
