[package]
name = "ma_behavior_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
ros2-client.workspace = true
ma-dds.workspace = true
serde = { workspace = true, features = ["derive"] }
smol.workspace = true
futures-util.workspace = true
ma_interfaces.workspace = true
env_logger.workspace = true
log.workspace = true
pin-project-lite.workspace = true
async-shutdown = "0.2"

[[bin]]
name = "ma_bt"
path = "src/main.rs"

