[package]
name = "ma_serial_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
ros2-client.workspace = true
ros2-interfaces-humble = { workspace = true, features = ["geometry_msgs"] }
tokio = { workspace = true, features = ["io-util"] }
tokio-serial = { version = "5.4.5", features = ["codec"] }
tokio-util = { workspace = true, features = ["codec"] }
