[package]
name = "ma_serial_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
r2r.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tokio-serial = { version = "5.4.5", features = ["codec"] }
tokio-util = { workspace = true, features = ["codec"] }
