[package]
name = "ma_serial_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
ros2-client.workspace = true
smol.workspace = true
serialport = "4.7"
ma-dds.workspace = true
serde = { workspace = true, features = ["derive"] }
async-io = "2.4"
ma_interfaces.workspace = true
zerocopy = { version = "0.8", features = ["derive"] }
pin-project.workspace = true
log = "*"
